# odarcon

./: Cargo.toml  deny.toml
.github/workflows/: tests.yml
res/: logcolors.toml  theme.toml
src/: config.rs  main.rs  protocol.rs  socket.rs
