[package]
name = "odarcon"
version = "0.1.0"
edition = "2024"

[dependencies]
cursive = { version = "0.21", features = ["toml"] }
directories = "6.0"
tokio-tungstenite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tokio = { version = "1.49", features = ["full"] }
futures-util = "0.3"
sha2 = "0.10"
hmac = "0.12"
toml = "0.9"
thiserror = "2.0"
log = "0.4"
